name: mpd
version: 0.0.0.0

synopsis:
  A library for scripting client interactions with MPD,
  the Music Player Daemon.
description:
  nanompd aims to abstract away the boring parts of
  interfacing with MPD, primarily in service of higher-level
  client applications.
category: Network, Sound

maintainer: joachifm@fastmail.fm
homepage: https://github.com/joachifm/nanompd#readme
bug-reports: https://github.com/joachifm/nanompd/issues

license: MIT
license-file: COPYING

build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  CONTRIBUTORS
  README.markdown

source-repository head
  type: git
  location: https://github.com/joachifm/nanompd.git

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base == 4.*
    , either
    , exceptions
    , mtl
    , network

  exposed-modules:
      MPD
    , MPD.Core
    , MPD.Commands
    , MPD.Commands.Parser
    , MPD.Commands.Types

  other-modules:

  ghc-options:
    -Wall
    -funbox-strict-fields

  ghc-prof-options:
    -auto-all

test-suite specs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: src test
  main-is: Spec.hs

  other-modules:
      MPD.Core.CommandStrSpec
    , MPD.Core.ParserSpec
    , MPD.Commands.ParserSpec

  build-depends:
      base
    , either
    , exceptions
    , mtl
    , network

    , hspec
    , hspec-expectations

  ghc-options:
    -Wall
    -Werror

  cpp-options:
    -DTEST
