name: mpd
version: 0.0.0.0

synopsis:
  Scripting client interactions with MPD.
description:
  A library for scripting client interactions with MPD,
  the Music Player Daemon (<http://musicpd.org/>).
category: Network, Sound

maintainer: joachifm@fastmail.fm
homepage: https://github.com/joachifm/nanompd#readme
bug-reports: https://github.com/joachifm/nanompd/issues

license: MIT
license-file: COPYING

build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  CONTRIBUTORS
  README.markdown

source-repository head
  type: git
  location: https://github.com/joachifm/nanompd.git

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    -- Platform dependencies
      base >= 4 && < 5
    , attoparsec >= 0.10 && < 1
    , bytestring >= 0.10 && < 1
    , deepseq >= 1.3 && < 2
    , mtl >= 2 && < 3
    , network >= 2.4 && < 3
    , text >= 1.1 && < 2
    , time >= 1.4.2 && < 2
    , unordered-containers >= 0.2.4 && < 1

    -- Extra
    , either >= 4.3 && < 5
    , exceptions >= 0.6 && < 1

  exposed-modules:
      MPD
    , MPD.Commands
    , MPD.Commands.Parser
    , MPD.Commands.Types
    , MPD.Core

  other-modules:
      MPD.Commands.Query
    , MPD.Core.ClientError
    , MPD.Core.Command
    , MPD.Core.CommandArg
    , MPD.Core.CommandStr
    , MPD.Core.Conn
    , MPD.Core.Parser
    , MPD.Core.Run

  ghc-options:
    -Wall
    -funbox-strict-fields

  ghc-prof-options:
    -fprof-auto

test-suite specs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: src test
  main-is: Spec.hs

  other-modules:
      MPD.Core.CommandStrSpec
    , MPD.Core.ParserSpec
    , MPD.Commands.ParserSpec

  build-depends:
      base
    , attoparsec
    , bytestring
    , deepseq
    , either
    , exceptions
    , mtl
    , network
    , text
    , time
    , unordered-containers

    , hspec
    , hspec-expectations
    , QuickCheck

  ghc-options:
    -Wall
    -Werror

  cpp-options:
    -DTEST

benchmark ParseBench
  type: exitcode-stdio-1.0
  main-is: bench/ParseBench.hs
  default-language: Haskell2010

  build-depends:
      base
    , attoparsec
    , criterion
    , mpd
